--- a/feedsidebar/chrome/locale/hu-HU/locale.properties
+++ b/feedsidebar/chrome/locale/hu-HU/locale.properties
@@ -1,8 +1,34 @@
+extensions.feedbar@efinke.com.description=Megjeleníti az Élő Könyvjelzőket az oldalsávban.
 feedbar.time.pm=PM
 feedbar.time.am=AM
 feedbar.nextUpdate=Következő frissítés: %S
-feedbar.checkingFeeds=Élő könyvjelzők ellenőrzése %S/%S...
-feedbar.errors.unavailable=Az élő könyvjelző elérhetetlen
-feedbar.errors.emptyFeed=Üres élő könyvjelző
-feedbar.errors.invalidFeed=Érvénytelen élő könyvjelző.
+feedbar.checkingFeeds=Hírfolyamok ellenőrzése %S/%S...
+feedbar.errors.unavailable=Hírfolyam elérhetetlen
+feedbar.errors.emptyFeed=Üres hírfolyam.
+feedbar.errors.invalidFeed=Érvénytelen hírfolyam.
 feedbar.errors.noChannel=Hiányzik a csatorna.
+feedbar.errors.noChannelElements=Nincs elem a csatornában
+feedbar.errors.noFeedsFound=Nincs hírfolyam.
+feedbar.errors.noFeedsFoundMore=Iratkozzon fel egy hírfolyamra a Firefox Élő Könyvjelző szolgáltatása segítségével ahhoz, hogy megtekinthesd a hírfolyamokat az oldalsávban.
+feedbar.errors.noFeedsFoundLabel=További információk
+feedbar.errors.noFeedsFoundKey=M
+feedbar.errors.couldNotUnsubscribe=Hiba: A Feed Sidebar nem tudta eltávolítani a hírfolyamot a könyvjelzők közül.
+feedbar.errors.parseError=Hiba a hírfolyam feldolgozása során.
+feedbar.errors.invalidUrl=Az URL nem hírfolyamot takar.
+feedbar.noTitle=Nincs cím
+feedbar.noContent=Nincs tartalom
+feedbar.noSummary=Nincs összegzés.
+feedbar.warnOnTabs=Figyelmeztetés, ha több lap megnyitása lelassítaná a böngészőt.
+feedbar.warnOnTabsMessage=Egyszerre %S lap megnyitása lelassíthatja a böngészőt az oldalak betöltése alatt. Biztosan folytatja?
+feedbar.confirmOpenInTabs=Megnyitás megerősítése
+feedbar.openConfirmText=Lapok megnyitása
+feedbar.newItemTitle=Új hír
+feedbar.newItemsTitle=Új hírek
+feedbar.newItemBody=Egy új hír érkezett.
+feedbar.newItemsBody=%S új hír érkezett.
+feedbar.workingOffline=Kapcsolat nélküli munka
+feedbar.permalink=Hír hivatkozása
+feedbar.feedLink=Hírfolyam hivatkozása
+feedbar.siteLink=Oldal hivatkozása
+feedbar.publishedOn=Megjelent: %S a(z) <a href="%S">%S</a> oldalon.
+feedbar.previewHeader=A <a href="%S">%S</a> hírfolyamból
