--- a/feedsidebar/chrome/locale/nl-NL/locale.properties
+++ b/feedsidebar/chrome/locale/nl-NL/locale.properties
@@ -5,7 +5,7 @@ feedbar.nextUpdate=Volgende verversing: %S
 feedbar.checkingFeeds=%S van %S feeds wordt gecontroleerd...
 feedbar.errors.unavailable=Feed is niet beschikbaar
 feedbar.errors.emptyFeed=Lege feed
-feedbar.errors.invalidFeed=Feed heeft een ongeldig root element
+feedbar.errors.invalidFeed=Ongeldige feed.
 feedbar.errors.noChannel=Geen channel element op de verwachte plaats
 feedbar.errors.noChannelElements=Geen elementen in channellabel
 feedbar.errors.noFeedsFound=Geen feeds gevonden.
