--- a/feedsidebar/chrome/locale/pl-PL/locale.properties
+++ b/feedsidebar/chrome/locale/pl-PL/locale.properties
@@ -1,7 +1,7 @@
 extensions.feedbar@efinke.com.description=Wyświetla nieprzeczytane wiadomości z dynamicznych zakładek w panelu bocznym
 feedbar.time.pm=PM
 feedbar.time.am=AM
-feedbar.nextUpdate=Aktualizacja o: %S
+feedbar.nextUpdate=Następna aktualizacja o: %S
 feedbar.checkingFeeds=Sprawdzanie %S z %S kanałów...
 feedbar.errors.unavailable=Kanał jest niedostępny
 feedbar.errors.emptyFeed=Pusty kanał
@@ -13,22 +13,22 @@ feedbar.errors.noFeedsFoundMore=Aby oglądać wiadomości z kanału w panelu boc
 feedbar.errors.noFeedsFoundLabel=Więcej informacji
 feedbar.errors.noFeedsFoundKey=W
 feedbar.errors.couldNotUnsubscribe=Błąd. Feed Sidebar nie mógł usunąć kanału z zakładek.
-feedbar.errors.parseError=Błąd przetwarzania kanału.
-feedbar.errors.invalidUrl=Brak adresu kanału.
+feedbar.errors.parseError=Błąd przetwarzania kanału
+feedbar.errors.invalidUrl=Brak adresu kanału
 feedbar.noTitle=Brak tytułu
 feedbar.noContent=Nie ma nowych wiadomości
-feedbar.noSummary=Brak krótkiego opisu.
+feedbar.noSummary=Brak krótkiego opisu
 feedbar.warnOnTabs=Informuj jeśli otwarcie wielu kart może spowolnić przeglądarkę
 feedbar.warnOnTabsMessage=Zamierzasz otworzyć %S kart. Otwieranie tylu stron może spowolnić działanie przeglądarki. Czy na pewno chcesz kontynuować?
 feedbar.confirmOpenInTabs=Potwierdzenie otwierania
 feedbar.openConfirmText=Otwórz karty
 feedbar.newItemTitle=Nowy element kanału
-feedbar.newItemsTitle=Nowy elementy kanału
-feedbar.newItemBody=Masz jeden nowy element kanału
-feedbar.newItemsBody=Masz %S nowe(ych) elementów kanału
+feedbar.newItemsTitle=Nowe elementy kanału
+feedbar.newItemBody=Jeden nowy element kanału
+feedbar.newItemsBody=Nowe elementy kanału - %S
 feedbar.workingOffline=Praca offline
 feedbar.permalink=Odnośnik do bloga/forum
 feedbar.feedLink=Odnośnik do kanału
 feedbar.siteLink=Odnośnik do witryny
-feedbar.publishedOn=Opublikowano na %S w <a href="%S">%S</a>
+feedbar.publishedOn=Opublikowano dnia %S na <a href="%S">%S</a>
 feedbar.previewHeader=Z <a href="%S">%S</a>
