--- a/feedsidebar/chrome/locale/tr-TR/locale.properties
+++ b/feedsidebar/chrome/locale/tr-TR/locale.properties
@@ -8,6 +8,8 @@ feedbar.errors.invalidFeed=Yanlış Besleme
 feedbar.errors.noFeedsFound=Besleme bulunamadı
 feedbar.errors.noFeedsFoundLabel=Daha fazla bilgi
 feedbar.errors.noFeedsFoundKey=M
+feedbar.errors.parseError=Besleme ayrıştırma hatası.
+feedbar.errors.invalidUrl=Bu bir besleme URLsi değil.
 feedbar.noTitle=Konu Yok
 feedbar.noContent=İçerik Yok
 feedbar.confirmOpenInTabs=Açmayı Onaylayın
@@ -20,3 +22,4 @@ feedbar.workingOffline=Çevrimdışı Çalış
 feedbar.permalink=Kalıcı Bağlantı
 feedbar.feedLink=Besleme Linki
 feedbar.siteLink=Site Linki
+feedbar.previewHeader=Kaynak <a href="%S">%S</a>
