--- a/feedsidebar/chrome/locale/be-BY/locale.dtd
+++ b/feedsidebar/chrome/locale/be-BY/locale.dtd
@@ -8,10 +8,42 @@
 <!ENTITY feedbar.openAllInTabs "Адкрыць усё ва ўкладках">
 <!ENTITY feedbar.openFeedInTabs "Адкрыць навіны ва ўкладках">
 <!ENTITY feedbar.markAsRead "Адзначыць як прачытанае">
+<!ENTITY feedbar.markAsUnread "Mark as Unread">
 <!ENTITY feedbar.markFeedAsRead "Адзначыць стужку як прачытаную">
+<!ENTITY feedbar.markFeedAsUnread "Mark Feed as Unread">
 <!ENTITY feedbar.markAllAsRead "Адзначыць усё як прачытанае">
+<!ENTITY feedbar.markAllAsUnread "Mark All as Unread">
 <!ENTITY feedbar.reloadFeeds "Абнавіць стужкі навінаў">
 <!ENTITY feedbar.stopFeedUpdate "Адмяніць абнаўленне стужкі">
 <!ENTITY feedbar.minutes "хвілінаў">
 <!ENTITY feedbar.hour "гадзіна">
 <!ENTITY feedbar.hours "гадзіны">
+<!ENTITY feedbar.showLastTooltip "Limit the age of the items shown">
+<!ENTITY feedbar.showLastDaysPre "Show last ">
+<!ENTITY feedbar.showLastDaysPost " days">
+<!ENTITY feedbar.showLastWeeksPre "Show last ">
+<!ENTITY feedbar.showLastWeeksPost " weeks">
+<!ENTITY feedbar.showAllItems "Show all items">
+<!ENTITY feedbar.showLastDay "Show last day">
+<!ENTITY feedbar.showLastWeek "Show last week">
+<!ENTITY feedbar.showLastMonth "Show last month">
+<!ENTITY feedbar.copyTitle "Copy Title">
+<!ENTITY feedbar.copyLink "Copy Link">
+<!ENTITY feedbar.unsubscribe "Unsubscribe">
+<!ENTITY feedbar.options "Options">
+<!ENTITY feedbar.hideReadItems "Hide read items">
+<!ENTITY feedbar.updateEvery1 "Update feeds every">
+<!ENTITY feedbar.updateEvery2 "minutes.">
+<!ENTITY feedbar.showAllItemsFull "Show all items, regardless of age">
+<!ENTITY feedbar.onlyShow1 "Only show items from the last">
+<!ENTITY feedbar.onlyShow2 "days.">
+<!ENTITY feedbar.24HourTime "Use 24-hour time">
+<!ENTITY feedbar.autoClose "Automatically close the sidebar when marking all items as read.">
+<!ENTITY feedbar.notifications "Show pop-up notifications when new items are detected.">
+<!ENTITY feedbar.runInSidebar "Only check for updates when the sidebar is open.">
+<!ENTITY feedbar.previewQuestion "When opening a feed item...">
+<!ENTITY feedbar.previewAnswer1 "Open the linked webpage (default).">
+<!ENTITY feedbar.previewAnswer2 "Show the full item description in the browser window.">
+<!ENTITY feedbar.showAllItemsButtonLabel "All">
+<!ENTITY feedbar.showAll.tooltip "Enable to show both read and unread items.">
+<!ENTITY feedbar.alwaysOpenInNewTab "Always open items in new tabs">
