--- a/feedsidebar/chrome/locale/de-DE/locale.properties
+++ b/feedsidebar/chrome/locale/de-DE/locale.properties
@@ -27,3 +27,4 @@ feedbar.feedLink=Feed
 feedbar.siteLink=Webseite
 feedbar.publishedOn=Veröffentlicht am %S in <a href="%S">%S</a>
 feedbar.previewHeader=Von <a href="%S">%S</a>
+feedbar.download=Download
