--- a/feedsidebar/chrome/locale/fr-FR/locale.properties
+++ b/feedsidebar/chrome/locale/fr-FR/locale.properties
@@ -27,3 +27,4 @@ feedbar.feedLink=Adresse du flux
 feedbar.siteLink=Adresse Web
 feedbar.publishedOn=Publié sur %S dans <a href="%S">%S</a>
 feedbar.previewHeader=Depuis <a href="%S">%S</a>
+feedbar.download=Téléchargement
