--- a/feedsidebar/chrome/locale/hu-HU/locale.properties
+++ b/feedsidebar/chrome/locale/hu-HU/locale.properties
@@ -27,3 +27,4 @@ feedbar.feedLink=Hírfolyam hivatkozása
 feedbar.siteLink=Oldal hivatkozása
 feedbar.publishedOn=Megjelent: %S a(z) <a href="%S">%S</a> oldalon.
 feedbar.previewHeader=A <a href="%S">%S</a> hírfolyamból
+feedbar.download=Download
