--- a/feedsidebar/chrome/locale/it-IT/locale.properties
+++ b/feedsidebar/chrome/locale/it-IT/locale.properties
@@ -27,3 +27,4 @@ feedbar.feedLink=Link del feed
 feedbar.siteLink=Link del sito web
 feedbar.publishedOn=Pubblicato %S nel feed <a href="%S">%S</a>
 feedbar.previewHeader=Da <a href="%S">%S</a>
+feedbar.download=Scarica
