--- a/feedsidebar/chrome/locale/nl-NL/locale.properties
+++ b/feedsidebar/chrome/locale/nl-NL/locale.properties
@@ -27,3 +27,4 @@ feedbar.feedLink=Feedkoppeling
 feedbar.siteLink=Sitekoppeling
 feedbar.publishedOn=Gepubliceerd op %S in <a href="%S">%S</a>
 feedbar.previewHeader=Van <a href="%S">%S</a>
+feedbar.download=Downloaden
