--- a/feedsidebar/chrome/locale/pl-PL/locale.properties
+++ b/feedsidebar/chrome/locale/pl-PL/locale.properties
@@ -27,3 +27,4 @@ feedbar.feedLink=Odnośnik do kanału
 feedbar.siteLink=Odnośnik do witryny
 feedbar.publishedOn=Opublikowano dnia %S na <a href="%S">%S</a>
 feedbar.previewHeader=Z <a href="%S">%S</a>
+feedbar.download=Pobierz
