--- a/feedsidebar/chrome/locale/ru-RU/locale.properties
+++ b/feedsidebar/chrome/locale/ru-RU/locale.properties
@@ -27,3 +27,4 @@ feedbar.feedLink=Адрес ленты
 feedbar.siteLink=Адрес сайта
 feedbar.publishedOn=Опубликовано %S в <a href="%S">%S</a>
 feedbar.previewHeader=От <a href="%S">%S</a>
+feedbar.download=Download
