--- a/feedsidebar/chrome/locale/sk-SK/locale.properties
+++ b/feedsidebar/chrome/locale/sk-SK/locale.properties
@@ -27,3 +27,4 @@ feedbar.feedLink=Odkaz kanálu
 feedbar.siteLink=Odkaz stránky
 feedbar.publishedOn=Založený %S na <a href="%S">%S</a>
 feedbar.previewHeader=Od <a href="%S">%S</a>
+feedbar.download=Stiahnuť
