--- a/feedsidebar/chrome/locale/zh-CN/locale.properties
+++ b/feedsidebar/chrome/locale/zh-CN/locale.properties
@@ -27,3 +27,4 @@ feedbar.feedLink=订阅链接
 feedbar.siteLink=网站链接
 feedbar.publishedOn=%S 发布于 <a href="%S">%S</a>
 feedbar.previewHeader=来自 <a href="%S">%S</a>
+feedbar.download=下载
