--- a/feedsidebar/chrome/locale/zh-TW/locale.properties
+++ b/feedsidebar/chrome/locale/zh-TW/locale.properties
@@ -27,3 +27,4 @@ feedbar.feedLink=即時書籤連結
 feedbar.siteLink=網站連結
 feedbar.publishedOn=發佈 %s 於 <a href="%S">%S</a>
 feedbar.previewHeader=來自 <a href="%S">%S</a>
+feedbar.download=Download
