--- a/feedsidebar/chrome/locale/fy-NL/locale.properties
+++ b/feedsidebar/chrome/locale/fy-NL/locale.properties
@@ -27,3 +27,4 @@ feedbar.feedLink=Feedkeppeling
 feedbar.siteLink=Sidekeppeling
 feedbar.publishedOn=Publisearre op %S yn <a href="%S">%S</a>
 feedbar.previewHeader=Fan <a href="%S">%S</a>
+feedbar.download=Download
