--- a/feedsidebar/chrome/locale/tr-TR/locale.properties
+++ b/feedsidebar/chrome/locale/tr-TR/locale.properties
@@ -1,3 +1,4 @@
+extensions.feedbar@efinke.com.description=Displays the items from your Live Bookmarks in the sidebar.
 feedbar.time.pm=PM
 feedbar.time.am=AM
 feedbar.nextUpdate=Sıradaki güncelleme: %S
@@ -5,10 +6,15 @@ feedbar.checkingFeeds=Beslemelerin %S de %S kontrol ediliyor...
 feedbar.errors.unavailable=Besleme Kullanılamıyor
 feedbar.errors.invalidFeed=Yanlış Besleme
 feedbar.errors.noFeedsFound=Besleme bulunamadı
+feedbar.errors.noFeedsFoundMore=Subscribe to a feed with Firefox's Live Bookmark feature to view the feed's items in the sidebar.
 feedbar.errors.noFeedsFoundLabel=Daha fazla bilgi
 feedbar.errors.noFeedsFoundKey=M
+feedbar.errors.couldNotUnsubscribe=Error: Feed Sidebar could not remove the feed from your bookmarks.
 feedbar.errors.parseError=Besleme ayrıştırma hatası.
 feedbar.errors.invalidUrl=Bu bir besleme URLsi değil.
+feedbar.noSummary=No summary provided.
+feedbar.warnOnTabs=Warn me when opening multiple tabs might slow down the browser
+feedbar.warnOnTabsMessage=You are about to open %S tabs. This might slow down the browser while the pages are loading. Are you sure you want to continue?
 feedbar.confirmOpenInTabs=Açmayı Onaylayın
 feedbar.openConfirmText=Sekmede Aç
 feedbar.newItemTitle=Yeni Besleme Ögesi
@@ -19,4 +25,6 @@ feedbar.workingOffline=Çevrimdışı Çalış
 feedbar.permalink=Kalıcı Bağlantı
 feedbar.feedLink=Besleme Linki
 feedbar.siteLink=Site Linki
+feedbar.publishedOn=Published on %S in <a href="%S">%S</a>
 feedbar.previewHeader=Kaynak <a href="%S">%S</a>
+feedbar.download=Download
