--- a/feedsidebar/chrome/locale/en-US/locale.properties
+++ b/feedsidebar/chrome/locale/en-US/locale.properties
@@ -1,4 +1,4 @@
-extensions.feedbar@efinke.com.description=Displays the items from your Live Bookmarks in the sidebar.
+extensions.feedbar@efinke.com.description=Displays the items from your Live Bookmarks in a sidebar.
 feedbar.time.pm=PM
 feedbar.time.am=AM
 feedbar.nextUpdate=Next update: %S
