--- a/feedsidebar/chrome/locale/en-US/locale.dtd
+++ b/feedsidebar/chrome/locale/en-US/locale.dtd
@@ -28,6 +28,11 @@
 <!ENTITY feedbar.showLastWeek "Show last week">
 <!ENTITY feedbar.showLastMonth "Show last month">
 
+<!ENTITY feedbar.sortBy "Sort by...">
+<!ENTITY feedbar.sort.name "Name">
+<!ENTITY feedbar.sort.default "Default">
+<!ENTITY feedbar.sort.updated "Last Updated">
+
 <!ENTITY feedbar.copyTitle "Copy Title">
 <!ENTITY feedbar.copyLink "Copy Link">
 
