--- a/feedsidebar/chrome/locale/de-DE/locale.properties
+++ b/feedsidebar/chrome/locale/de-DE/locale.properties
@@ -6,15 +6,15 @@ feedbar.checkingFeeds=Feed %S von %S wird aktualisiert
 feedbar.errors.unavailable=Feed ist nicht erreichbar
 feedbar.errors.invalidFeed=Ungültiger Feed
 feedbar.errors.noFeedsFound=Keine Feeds gefunden
-feedbar.errors.noFeedsFoundMore=Fügen Sie einen Feed mittels Firefox als Dynamisches Lesezeichen hinzu und betrachten Sie diese in der Sidebar.
+feedbar.errors.noFeedsFoundMore=Abonnieren Sie einen Feed mittels Firefox als Dynamisches Lesezeichen, um die Feed-Einträge in der Sidebar anzeigen zu lassen.
 feedbar.errors.noFeedsFoundLabel=Details
 feedbar.errors.noFeedsFoundKey=D
 feedbar.errors.couldNotUnsubscribe=Ein Fehler ist aufgetreten: Feed Sidebar konnte den Feed nicht aus Ihren Lesezeichen entfernen
 feedbar.errors.parseError=Fehler beim Auswerten des Feeds
 feedbar.errors.invalidUrl=Keine Feed-Adresse
 feedbar.noSummary=Keine Zusammenfassung verfügbar
-feedbar.warnOnTabs=Warnen, falls das Öffnen mehrerer Tabs den Browser verlangsamen kann
-feedbar.warnOnTabsMessage=Es werden %S Tabs gleichzeitig geöffnet; das könnte den Computer verlangsamen, während die Seiten geladen werden. Sind Sie sicher, dass Sie fortfahren möchten?
+feedbar.warnOnTabs=Warnen, falls das Öffnen mehrerer Tabs den Browser verlangsamen könnte
+feedbar.warnOnTabsMessage=Es werden %S Tabs gleichzeitig geöffnet. Dies kann den Browser verlangsamen, während die Seiten geladen werden. Sind Sie sicher, dass Sie fortfahren möchten?
 feedbar.confirmOpenInTabs=Öffnen bestätigen
 feedbar.openConfirmText=Tabs öffnen
 feedbar.newItemTitle=Neuer Feed-Eintrag
@@ -24,7 +24,7 @@ feedbar.newItemsBody=%S neue Feed-Einträge
 feedbar.workingOffline=Derzeit offline
 feedbar.permalink=Permalink
 feedbar.feedLink=Feed
-feedbar.siteLink=Webseite
+feedbar.siteLink=Website
 feedbar.publishedOn=Veröffentlicht am %S in <a href="%S">%S</a>
 feedbar.previewHeader=Von <a href="%S">%S</a>
 feedbar.download=Download
