--- a/feedsidebar/chrome/locale/en-US/locale.properties
+++ b/feedsidebar/chrome/locale/en-US/locale.properties
@@ -23,8 +23,8 @@ feedbar.openConfirmText=Open tabs
 
 feedbar.newItemTitle=New Feed Item
 feedbar.newItemsTitle=New Feed Items
-feedbar.newItemBody=You have one new feed item.
-feedbar.newItemsBody=You have %S new feed items.
+feedbar.newItemBody=One new item
+feedbar.newItemsBody=%S new items
 feedbar.workingOffline=Working offline
 
 feedbar.permalink=Permalink
